--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,10 @@
 	org.gradle.jvmargs=-Xmx6G
 
 # Mod Properties
-	mod_id=template_mod
-	mod_name=TemplateMod
+	mod_id=classicgamerule
+	mod_name=Classic Gamerule
 	mod_version=1.0.0
 	maven_group=me.fallenbreath
-	archives_base_name=template_mod
+	archives_base_name=classic-gamerule
 
 # Global Dependencies
-	# https://github.com/Fallen-Breath/conditional-mixin
-#	conditionalmixin_version=0.6.4
-
-	# https://github.com/LlamaLad7/MixinExtras
-#	mixinextras_version=0.3.6
