--- a/versions/1.21.11-fabric/gradle.properties
+++ b/versions/1.21.11-fabric/gradle.properties
@@ -1,6 +1,6 @@
 # Fabric Properties
-	# check these on https://fallen-breath.github.io/fabric-versions/?&version=1.21.11-pre3
-	minecraft_version=1.21.11-pre3
+	# check these on https://fallen-breath.github.io/fabric-versions/?&version=1.21.11-rc2
+	minecraft_version=1.21.11-rc2
 	loom.platform=fabric
 
 # Mod Metadata
@@ -10,6 +10,6 @@
 
 # Build Information
 	# The target mc versions for the mod during mod publishing, separated with \n
-	game_versions=1.21.11-pre3
+	game_versions=1.21.11-rc2
 
 # Dependencies
