--- a/versions/1.21.11-fabric/gradle.properties
+++ b/versions/1.21.11-fabric/gradle.properties
@@ -1,15 +1,15 @@
 # Fabric Properties
-	# check these on https://fallen-breath.github.io/fabric-versions/?&version=1.21.11-rc2
-	minecraft_version=1.21.11-rc2
+	# check these on https://fallen-breath.github.io/fabric-versions/?&version=1.21.11
+	minecraft_version=1.21.11
 	loom.platform=fabric
 
 # Mod Metadata
 	# https://fabricmc.net/versions.html
 	fabric_loader_version=0.17.3
-	minecraft_dependency=>=1.21.11-
+	minecraft_dependency=>=1.21.11
 
 # Build Information
 	# The target mc versions for the mod during mod publishing, separated with \n
-	game_versions=1.21.11-rc2
+	game_versions=1.21.11
 
 # Dependencies
