--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 import com.replaymod.gradle.preprocess.Node
+import groovy.json.JsonSlurper
 
 plugins {
 	id 'maven-publish'
@@ -21,7 +22,34 @@ def linkNode(Node src, Node dst) {
 preprocess {
     strictExtraMappings = false
 
-	def mc12111_fabric = createNode('1.21.11-fabric', 1_21_11, '')
+	def settings = new JsonSlurper().parseText(file('settings.json').text)
+	def all_versions = new ArrayList<>(settings.versions)
+	Map<String, Node> all_nodes = [:]
+
+	for (String version : all_versions) {
+		String[] versionParts = version.split("-")[0].split("\\.")
+		if (versionParts.size() == 2) {
+			versionParts = [versionParts[0], versionParts[1], "0"]
+		}
+		int versionId = Integer.parseInt(versionParts[0]) * 10000 + Integer.parseInt(versionParts[1]) * 100 + Integer.parseInt(versionParts[2])
+		all_nodes[version] = createNode(version, versionId, '')
+	}
+
+	Node prev_fabric_node = null
+	for (String version : all_versions) {
+		def (mc_version, mod_brand) = version.split("-")
+		def node = all_nodes[version]
+		switch (mod_brand) {
+			case "fabric":
+				if (prev_fabric_node != null) {
+					linkNode(prev_fabric_node, all_nodes[version])
+				}
+				prev_fabric_node = node
+				break
+			default:
+				linkNode(all_nodes["${mc_version}-fabric"], all_nodes[version])
+		}
+	}
 }
 
 tasks.register('buildAndGather') {
