--- a/common.gradle
+++ b/common.gradle
@@ -19,6 +19,9 @@ preprocess {
 
 repositories {
 	maven {
+		url = 'https://maven.parchmentmc.org'
+	}
+	maven {
 		url = 'https://jitpack.io'
 	}
 	maven {
@@ -37,7 +40,12 @@ configurations {
 dependencies {
 	// loom
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings loom.officialMojangMappings()
+    mappings loom.layered() {
+        officialMojangMappings()
+        if (project.parchment_version.size() > 0) {
+            parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_version}@zip")
+        }
+    }
 
 	if (mod_brand == 'fabric') {
 		modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
@@ -118,10 +126,13 @@ version = fullProjectVersion
 // See https://youtrack.jetbrains.com/issue/IDEA-296490
 // if IDEA complains about "Cannot resolve resource filtering of MatchingCopyAction" and you want to know why
 processResources {
-	inputs.property "id", project.mod_id
-	inputs.property "name", project.mod_name
-	inputs.property "version", fullModVersion
-	inputs.property "minecraft_dependency", project.minecraft_dependency
+	def modProperties = [
+			"id"                  : project.mod_id,
+			"name"                : project.mod_name,
+			"version"             : fullModVersion,
+			"minecraft_dependency": project.minecraft_dependency,
+	]
+	inputs.properties(modProperties)
 
 	def good_files = [] as Set
 	def all_files = [] as Set
@@ -139,13 +150,7 @@ processResources {
 		def path = it2 as String
 		if (good_files.contains(path)) {
 			filesMatching(path) {
-				def valueMap = [
-						"id": project.mod_id,
-						"name": project.mod_name,
-						"version": fullModVersion,
-						"minecraft_dependency": project.minecraft_dependency,
-				]
-				expand valueMap
+				expand modProperties
 			}
 		} else {
 			exclude path
@@ -191,8 +196,9 @@ java {
 }
 
 jar {
+	inputs.property "archives_base_name", project.archives_base_name
 	from(rootProject.file('LICENSE')) {
-		rename { "${it}_${project.archives_base_name}" }
+		rename { "${it}_${inputs.properties.archives_base_name}" }
 	}
 }
 
