--- a/versions/1.21.11-forge/gradle.properties
+++ b/versions/1.21.11-forge/gradle.properties
@@ -3,15 +3,13 @@
 	minecraft_version=1.21.11
 	# https://maven.parchmentmc.org/org/parchmentmc/data/
 	parchment_version=
-	loom.platform=fabric
+	loom.platform=forge
 
 # Mod Metadata
-	# https://fabricmc.net/versions.html
-	fabric_loader_version=0.18.2
-	minecraft_dependency=>=1.21.11 <1.22
+	# https://files.minecraftforge.net/net/minecraftforge/forge/index_1.21.11.html
+	forge_version=61.0.2
+	minecraft_dependency=[1.21.11, 1.22)
 
 # Build Information
 	# The target mc versions for the mod during mod publishing, separated with \n
 	game_versions=1.21.11
-
-# Dependencies
