--- a/versions/1.21.11-neoforge/gradle.properties
+++ b/versions/1.21.11-neoforge/gradle.properties
@@ -3,15 +3,13 @@
 	minecraft_version=1.21.11
 	# https://maven.parchmentmc.org/org/parchmentmc/data/
 	parchment_version=
-	loom.platform=fabric
+	loom.platform=neoforge
 
 # Mod Metadata
-	# https://fabricmc.net/versions.html
-	fabric_loader_version=0.18.2
-	minecraft_dependency=>=1.21.11 <1.22
+	# https://projects.neoforged.net/neoforged/neoforge
+	neoforge_version=21.11.0-beta
+	minecraft_dependency=[1.21.11, 1.22)
 
 # Build Information
 	# The target mc versions for the mod during mod publishing, separated with \n
 	game_versions=1.21.11
-
-# Dependencies
